include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook
DOC_MODULE = nemiver
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = \
			  figures/attach-dialog.png \
			  figures/execute-dialog.png \
			  figures/load-core-dialog.png \
			  figures/main-window.png \
			  figures/sessions-dialog.png \
			  figures/variable-inspector.png \
			  figures/set-breakpoint-dialog.png \
			  figures/open-files-target.png
DOC_LINGUAS = oc sv
