include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook
DOC_MODULE = nemiver
DOC_ENTITIES =
DOC_INCLUDES = legal.xml
DOC_FIGURES = \
			  figures/attach-dialog.png \
			  figures/execute-dialog.png \
			  figures/load-core-dialog.png \
			  figures/main-window.png \
			  figures/sessions-dialog.png \
			  figures/variable-inspector.png \
			  figures/set-breakpoint-dialog.png \
			  figures/open-files-target.png \
			  figures/global-variables-dialog.png \
			  figures/memory-view.png \
			  figures/registers-view.png \
			  figures/connect-remote-dialog.png \
			  figures/enabled-breakpoint.png \
			  figures/disabled-breakpoint.png
DOC_LINGUAS = cs de el es fr gl oc sl sv zh_CN
