@YELP_HELP_RULES@

HELP_ID = nemiver

HELP_FILES = \
	index.docbook \
	legal.xml

HELP_MEDIA = \
			  figures/attach-dialog.png \
			  figures/execute-dialog.png \
			  figures/load-core-dialog.png \
			  figures/main-window.png \
			  figures/sessions-dialog.png \
			  figures/variable-inspector.png \
			  figures/set-breakpoint-dialog.png \
			  figures/open-files-target.png \
			  figures/global-variables-dialog.png \
			  figures/memory-view.png \
			  figures/registers-view.png \
			  figures/connect-remote-dialog.png \
			  figures/enabled-breakpoint.png \
			  figures/disabled-breakpoint.png

HELP_LINGUAS = cs de el es fr gl oc pt_BR sl sv zh_CN
